# sifter

./: .gitignore  CLAUDE.md  LICENSE  README.md  codecov.yml  glama.json
.github/: release.yml
.github/workflows/: ci.yml  deploy-frontend.yml  docker.yml  docs.yml  publish-npm.yml  publish-pypi.yml  release.yml
.sdd/: config.yaml
bugs/: BUG-001-ui-not-updated-while-indexing.md  BUG-002-document-detail-missing-context.md  BUG-003-preview-not-visible.md
change-requests/: CR-001-multitenancy.md  CR-002-document-management.md  CR-003-agents-and-qa.md  CR-004-sdk-server-only.md  CR-005-event-system.md  CR-006-ui-redesign.md  CR-007-production-hardening.md  CR-008-oss-cloud-split.md  CR-009-package-restructuring.md  CR-010-frontend-to-oss.md  CR-011-google-authentication.md  CR-012-sift-default-folder.md  CR-013-filter-discard.md  CR-014-indexing-log.md  CR-015-document-download-preview.md  CR-016-folder-management.md  CR-017-records-search-and-detail.md  CR-018-positioning-rewrite.md  CR-019-docs-mintlify-migration.md  CR-020-landing-redesign.md  CR-021-billing-usage-settings.md  CR-021-mcp-server-v1.md  CR-022-audit-log-settings.md  CR-022-oss-dev-first-repositioning.md  CR-023-advanced-chat-ui.md  CR-023-mcp-write-tools.md  CR-024-live-dashboard-ui.md  CR-024-typescript-sdk.md  CR-025-cli.md  CR-025-connectors-ui.md  CR-026-mail-to-upload-ui.md  CR-026-query-nl-and-structured-queries.md  CR-027-citations-api.md  CR-027-github-sso-ui.md  CR-028-shared-result-ui.md  CR-028-typed-schema-generation.md  CR-029-zero-friction-self-host.md  CR-030-zapier-app.md  CR-031-user-account-settings.md  CR-032-sifts-list-scaling.md  (+5 more)
code/: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
code/cli/: package-lock.json  package.json  pyproject.toml  tsconfig.json
code/cli/sifter_cli/: config.py  main.py  output.py
code/cli/sifter_cli/commands/: auth.py  extract.py  folders.py  mcp.py  records.py  sifts.py
code/cli/src/: client.ts  index.ts
code/cli/src/commands/: extract.ts  folders.ts  records.ts  sifts.ts
code/mcp/: Dockerfile  README.md  pyproject.toml
code/mcp/sifter_mcp/: __init__.py  __main__.py  http_app.py  server.py
code/mcp/tests/: test_tools.py
code/sdk-python/: README.md  pyproject.toml
code/sdk-python/sifter/: __init__.py  async_client.py  client.py
code/server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
code/server/sifter/: auth.py  config.py  db.py  deps.py  server.py  storage.py
code/server/sifter/api/: _pagination.py  aggregations.py  auth.py  chat.py  chat_sessions.py  config.py  dashboards.py  documents.py  enterprise.py  folders.py  keys.py  orgs.py  sifts.py  templates.py  webhooks.py
code/server/sifter/models/: __init__.py  aggregation.py  correction_rule.py  document.py  extraction.py  extraction_result.py  processing_task.py  sift.py  sift_result.py  user.py  webhook.py
code/server/sifter/prompts/: aggregation_pipeline.md  chat_agent.md  extraction.md  qa_agent.md
code/server/sifter/services/: __init__.py  agent_tools.py  aggregation_service.py  api_key_service.py  auth_service.py  citation_resolver.py  dashboard_service.py  document_processor.py  document_service.py  email.py  extraction_agent.py  extraction_results.py  extraction_service.py  file_processor.py  limits.py  pipeline_agent.py  pipeline_validator.py  qa_agent.py  schema_service.py  sift_agent.py  sift_results.py  sift_service.py  webhook_service.py  widget_agent.py
code/server/sifter/templates/: bank_statement.json  contract.json  delivery_note.json  insurance.json  invoice.json  prescription.json  purchase_order.json  receipt.json  resume.json  utility_bill.json
code/server/tests/: conftest.py  test_agent_tools_unit.py  test_aggregation_service_unit.py  test_api.py  test_api_aggregations.py  test_api_auth.py  test_api_chat_sessions.py  test_api_documents.py  test_api_folders_webhooks.py  test_api_key_service_unit.py  test_api_sifts_coverage.py  test_api_sifts_extended.py  test_auth_and_keys.py  test_auth_service_unit.py  test_citations.py  test_dashboard_service_unit.py  test_dashboards.py  test_document_processor.py  test_document_service_unit.py  test_extraction_agent.py  test_file_processor.py  test_file_processor_unit.py  test_limits_and_email.py  test_models_unit.py  test_pipeline_agent.py  test_pipeline_validator.py  test_qa_agent_unit.py  test_schema_service.py  test_sdk.py  test_shims.py  test_sift_results_unit.py  test_sift_service_unit.py  test_storage.py  test_webhook_service_unit.py  test_widget_agent_unit.py
docs/: docs.json  mint.json
product/: users.md  vision.md
scripts/: bump-version.sh  deploy.sh  push-secrets.sh
system/: api.md  architecture.md  cloud.md  deployment.md  entities.md  frontend.md  mcp.md  roadmap.md
(+249 files in other folders)
