[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sifter-cli"
version = "0.1.0"
description = "Official CLI for Sifter — document extraction from the command line"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "sifter-ai>=0.1.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.scripts]
sifter = "sifter_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["sifter_cli"]
