[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sifter-ai"
version = "0.1.7"
description = "Python SDK for the Sifter document extraction API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sifter Contributors" }]
keywords = ["document", "extraction", "ai", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/sifter-ai/sifter"
Repository = "https://github.com/sifter-ai/sifter"

[tool.hatch.build.targets.wheel]
packages = ["sifter"]

[tool.uv]
package = true
